<resources>
    <string name="app_name">Business Info</string>
    <string name="backdrop_title">NalandaEd</string>
    <string name="backdrop_subtitle">Education For All</string>
    <string name="header_about">About</string>
    <string name="about">NalandaEd is online education platform for the students preparing
        for competitive exams in India. we provide live video stream of lectures with other facilities like
    tutorials, tips and tricks, online test etc.</string>
    <string name="header_address">Address</string>
    <string name="address">1st floor, Dumrawan Place, Dakbunglow circle, Patna, Bihar</string>
    <string name="header_contact">Contact</string>
    <string name="contact">Email: contact@nalandaEd.com \n
                                       : ujjawalanand1729@gmail.com</string>
</resources>
